--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zaurmag-gulp-project",
+  "name": "zaurmag-gulp-taskmanager",
   "version": "1.0.0",
   "description": "My gulp project v.4",
   "main": "index.js",
