Обновление версии bsync

--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   "author": "Zaur Magomedov",
   "license": "ISC",
   "devDependencies": {
-    "gulp-favicons": "latest",
     "browser-sync": "latest",
-    "critical": "latest",
+    "critical": "^1.3.9",
     "del": "latest",
     "gulp": "latest",
-    "gulp-autoprefixer": "latest",
-    "gulp-changed": "latest",
-    "gulp-cheerio": "latest",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-changed": "^4.0.2",
+    "gulp-cheerio": "^1.0.0",
     "gulp-concat": "latest",
-    "gulp-csso": "latest",
-    "gulp-load-plugins": "latest",
+    "gulp-csso": "^4.0.1",
+    "gulp-data": "latest",
+    "gulp-load-plugins": "^2.0.2",
     "gulp-plumber": "latest",
     "gulp-pug": "latest",
     "gulp-pug2": "latest",
     "gulp-pxtorem": "latest",
-    "gulp-rename": "latest",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "latest",
     "gulp-sass": "latest",
     "gulp-sourcemaps": "latest",
@@ -33,12 +33,12 @@
     "gulp-tinypng": "latest",
     "gulp-uglify": "latest",
     "gulp-watch": "latest",
-    "gulp.spritesmith": "latest",
     "gulp-zip": "latest",
-    "gulp-data": "latest"
+    "gulp.spritesmith": "^6.11.0"
   },
   "dependencies": {
-    "bootstrap": "latest",
+    "bootstrap": "^4.4.1",
+    "gulp-favicons": "^2.4.0",
     "magnific-popup": "latest",
     "owl.carousel": "latest"
   }
