Добавил таск Ftp

--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "latest",
-    "critical": "^1.3.9",
+    "critical": "latest",
     "del": "latest",
     "gulp": "latest",
-    "gulp-autoprefixer": "^7.0.1",
-    "gulp-changed": "^4.0.2",
-    "gulp-cheerio": "^1.0.0",
+    "gulp-autoprefixer": "latest",
+    "gulp-changed": "latest",
+    "gulp-cheerio": "latest",
     "gulp-concat": "latest",
-    "gulp-csso": "^4.0.1",
+    "gulp-csso": "latest",
     "gulp-data": "latest",
-    "gulp-load-plugins": "^2.0.2",
+    "gulp-load-plugins": "latest",
     "gulp-plumber": "latest",
     "gulp-pug": "latest",
     "gulp-pug2": "latest",
     "gulp-pxtorem": "latest",
-    "gulp-rename": "^2.0.0",
+    "gulp-rename": "latest",
     "gulp-replace": "latest",
     "gulp-sass": "latest",
     "gulp-sourcemaps": "latest",
@@ -34,11 +34,12 @@
     "gulp-uglify": "latest",
     "gulp-watch": "latest",
     "gulp-zip": "latest",
-    "gulp.spritesmith": "^6.11.0"
+    "gulp.spritesmith": "latest",
+    "vinyl-ftp": "latest"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "gulp-favicons": "^2.4.0",
+    "bootstrap": "latest",
+    "gulp-favicons": "latest",
     "magnific-popup": "latest",
     "owl.carousel": "latest"
   }
